Sites hide and show on map fixes

--- a/src/app/common/groups-list/groups-list.component.html
+++ b/src/app/common/groups-list/groups-list.component.html
@@ -1,5 +1,5 @@
 @if(type === 'Groups'){
-    <div class="corbel-bold " >
+    <div class="font-Barlow " >
         <!-- Group Header -->
             <!-- @if (isExpanded) {
                 <span class="w-[14px] h-[12px]">
@@ -10,8 +10,12 @@
                     <img src="assets/svg-icons/folder-icon.svg" alt="Search" class="w-[14px]" />
                 </span>
             } -->
-          <div (click)="toggle(group)" class="py-[10px] cursor-pointer flex border-y border-y-solid border-y-custom-border corbel-bold font-medium leading-[18px] text-secondaryText text-xs">
-            <div class="min-w-[355px] flex gap-[15px]" [ngStyle]="{ 'padding-left': padding + 'px' }">
+          <div (click)="toggle(group)" class="py-[10px] cursor-pointer flex border-y border-y-solid items-center border-y-custom-border font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
+            <div class="min-w-[355px] flex gap-[15px] items-center" [ngStyle]="{ 'padding-left': padding + 'px' }" >
+                <span (click)="$event.stopPropagation()">
+                    <mat-checkbox [checked]="isGroupChecked(group)" (change)="toggleGroupSelection(group, $event)">
+                    </mat-checkbox>
+                </span>
                 <img [src]="activeIndex?.id == group?.id ? 'assets/svg-icons/folder-icon-expanded.svg':'assets/svg-icons/folder-icon.svg'" alt="" />
                 <span >{{group.name}}</span>
             </div>
@@ -19,12 +23,22 @@
             <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span>
             <!-- <span class="min-w-[127.933px]">{{roundOff(group.surface_area)}}km²</span> -->
             <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
-                <span class="text-secondaryText">{{group.total_objects}}</span>
+                <!-- <span class="text-secondaryText">{{group.total_objects}}</span> -->
+                <div class="min-w-[102.324px] group relative">
+                    <span class="min-w-[102.324px]">{{group.total_objects}}</span>
+                    <div
+                        class="hidden absolute shadow-custom rounded-[10px] z-10 top-[20px] min-w-[200px] text-secondaryText group-hover:flex flex-col bg-primaryBg p-[10px] font-Barlow">
+                        <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
+                            <span>How many footprints since {{group.created_at | utcDateTimePipe}}</span>
+                        </div>
+
+                    </div>
+                </div>
                 <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setClass()" [matMenuTriggerFor]="menu">
                     <img src="assets/svg-icons/nav-menu-icon.svg" />
                 </span>
                 <mat-menu class="bg-secondaryBg" #menu="matMenu" id="site">
-                    <div class="inline-flex p-[15px] corbel-bold flex-col items-start gap-[15px]">
+                    <div class="inline-flex p-[15px] font-Barlow flex-col items-start gap-[15px]">
                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Notifications</span>
                         <div class="rounded-[25px] bg-primaryBg flex items-center justify-between">
                             <button (click)="$event.stopPropagation();setNotifications(true,group)"
@@ -49,8 +63,12 @@
             @if (group?.sites.length > 0){
                 @for (site of group?.sites;track site;let j = $index){
                     <div class="flex flex-col gap-[10px]">
-                        <div (click)="getSitesDetail(site)" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border px-[15px] corbel-bold font-medium leading-[18px] text-secondaryText text-xs">
+                        <div (click)="getSitesDetail(site)" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border px-[15px] font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
                             <div class="min-w-[340px] flex items-center gap-[15px]" [ngStyle]="{ 'padding-left': getPadding(padding) + 'px' }">
+                                <span (click)="$event.stopPropagation()">
+                                    <mat-checkbox [checked]="isChecked(site)" (change)="toggleSelection(site, $event)">
+                                    </mat-checkbox>
+                                </span>
                                 <img class="h-[25px] w-[25px] object-cover" height="30" width="30" [src]="site.site_type == 'Rectangle'? 'assets/svg-icons/rectangle-icon.svg':'assets/svg-icons/polygon-icon.svg'" alt="" />
                                 <span >{{site.name}}</span>
                             </div>
@@ -59,12 +77,22 @@
                             <!-- <span class="min-w-[127.933px]">{{roundOff(site?.area)}}km²</span> -->
                             <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
                                 <!-- <span class="text-secondary-heiglight">{{site.total_objects}}</span> -->
-                                <span class="text-secondaryText">{{site?.count}}</span>
+                                <!-- <span class="text-secondaryText">{{site?.count}}</span> -->
+                                <div class="min-w-[102.324px] group relative">
+                                    <span class="min-w-[102.324px]">{{site?.count}}</span>
+                                    <div
+                                        class="hidden absolute shadow-custom rounded-[10px] z-10 top-[20px] min-w-[200px] text-secondaryText group-hover:flex flex-col bg-primaryBg p-[10px] font-Barlow">
+                                        <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
+                                            <span>How many footprints since {{group.created_at | utcDateTimePipe}}</span>
+                                        </div>
+
+                                    </div>
+                                </div>
                                 <span class="w-[16px] h-[16px] flex cursor-pointer" (click)="$event.stopPropagation();setMainClass()" [matMenuTriggerFor]="siteMenu">
                                     <img src="assets/svg-icons/nav-menu-icon.svg" />
                                 </span>
                                 <mat-menu class="bg-secondaryBg" panelClass="custom-panel-class"  #siteMenu="matMenu" id="site" overlayPanelClass="custom-backdrop-class">
-                                    <div class="inline-flex p-[15px] corbel-bold flex-col items-start gap-[15px]">
+                                    <div class="inline-flex p-[15px] font-Barlow flex-col items-start gap-[15px]">
                                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Notifications</span>
                                         <div class="rounded-[25px] bg-primaryBg flex items-center justify-between">
                                             <button (click)="updateSite(true,site)"
@@ -97,7 +125,7 @@
                                         <span class="text-secondary-heiglight group text-xs font-bold leading-[18px]">Frequency</span>
                                         <span class="text-secondaryText text-xs font-bold leading-normal">{{siteDetail?.frequency}}</span>
                                         <div
-                                            class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] corbel-bold">
+                                            class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] font-Barlow">
                                             <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
                                                 <span>{{siteDetail?.frequency}}:</span>
                                                 <span>Number of distinct acquisitions on Most Recent Capture
@@ -111,10 +139,10 @@
                                         <span class="text-secondaryText text-xs font-bold leading-normal">{{siteDetail?.most_recent_info?.acquisition_datetime |
                                             dateFormat}}</span>
                                             <div
-                                                class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] corbel-bold">
+                                                class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] font-Barlow">
                                                 <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
                                                     <span>Date time:</span>
-                                                    <span>{{siteDetail?.most_recent_info?.acquisition_datetime | dateFormat}}
+                                                    <span>{{siteDetail?.most_recent_info?.acquisition_datetime | utcDateTimePipe}}
                                                         UTC</span>
                                                 </div>
                                                 <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
@@ -130,7 +158,7 @@
                                         <span
                                             class="text-secondaryText text-xs font-bold leading-normal">{{siteDetail?.gap.toFixed(3)}}</span>
                                             <div
-                                                class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] corbel-bold">
+                                                class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] font-Barlow">
                                                 <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
                                                     <span>Days since last image:</span>
                                                     <span>{{siteDetail?.gap.toFixed(3)}}
@@ -144,15 +172,21 @@
                                         <span class="text-yellow text-xs font-bold leading-normal" *ngIf="siteDetail?.most_recent_clear_info!==null">{{siteDetail?.most_recent_clear |
                                             dateFormat}}</span>
                                             <div *ngIf="siteDetail?.most_recent_clear_info!==null"
-                                            class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] corbel-bold">
+                                            class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] font-Barlow">
                                             <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
                                                 <span>Date time:</span>
-                                                <span >{{ siteDetail?.most_recent_clear_info?.acquisition_datetime | dateFormat}}
+                                                <span >{{ siteDetail?.most_recent_clear_info?.acquisition_datetime | utcDateTimePipe}}
                                                     UTC</span>
                                             </div>
                                             <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
                                                 <span>Vendor:</span>
                                                 <span>{{siteDetail?.most_recent_clear_info?.vendor_name }}</span>
+                                            </div>
+
+
+                                            <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
+                                                <span>Cloud Cover %:</span>
+                                                <span>{{toParseInt(siteDetail?.most_recent_clear_info?.cloud_cover_percent) }} (<30%)</span>
                                             </div>
                                         
                                         </div>
@@ -160,8 +194,7 @@
                                     <div class="flex items-center">
                                         <div class="w-[30px] h-[16px] ml-[5px] cursor-pointer" (click)="$event.stopPropagation();markerData(siteDetail)">
                                             <img src="assets/svg-icons/marker-icon.svg" alt=""></div>
-                                        <mat-checkbox [checked]="isChecked(siteDetail)" (change)="toggleSelection(siteDetail, $event)">
-                                        </mat-checkbox>
+                                       
                                     </div>
                                    
                                 </div>
@@ -173,7 +206,7 @@
             
                                 @if (calendarData?.length) {
                                 <div class="flex flex-col gap-[10px]">
-                                    <!-- <div class="flex gap-[5px] corbel-bold flex-wrap"> -->
+                                    <!-- <div class="flex gap-[5px] font-Barlow flex-wrap"> -->
                                     <!-- <div class="flex items-center flex-col gap-[5px]">
                                                         <span class="w-[15px] h-[15px] bg-[#272F34] rounded-[5px]"></span>
                                                         <span class="text-secondaryText text-[10px]">Very low</span>
@@ -225,7 +258,7 @@
                                           <div class="flex gap-[5px]" *ngFor="let legend of legens_calendar">
                                             <div class="flex flex-col items-center gap-[5px]">
                                               <div class="w-[20px] h-[20px] rounded-[5px]" [ngStyle]="{'background-color':legend?.color}"></div>
-                                              <div class="text-secondaryText text-sm font-medium leading-[18px] corbel-bold">{{legend?.min}}-{{legend?.max}}</div>
+                                              <div class="text-secondaryText text-sm font-medium leading-[18px] font-Barlow">{{legend?.min}}-{{legend?.max}}</div>
                                             </div>
                                     
                                           </div>
@@ -251,7 +284,7 @@
                                               (mouseleave)="clearTooltipPosition(day)"
                                             >
                                             {{ getDayFromDate(day.date) }}
-                                              <div *ngIf="day.value>0" [ngStyle]="tooltipPosition[day.date]" class="group-hover:inline-flex min-w-[160px] z-[9999999999] w-max absolute hidden corbel-bold p-[15px] flex-col items-start gap-[15px] rounded-[10px] bg-secondaryBg shadow-custom">
+                                              <div *ngIf="day.value>0" [ngStyle]="tooltipPosition[day.date]" class="group-hover:inline-flex min-w-[160px] z-[9999999999] w-max absolute hidden font-Barlow p-[15px] flex-col items-start gap-[15px] rounded-[10px] bg-secondaryBg shadow-custom">
                                                 <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">{{getDate(month.name,day)}}</span>
                                                 <span class="text-secondaryText text-sm font-medium leading-[18px]">{{day.value}} images available</span>
                                                 <!-- <span class="text-yellow pt-[15px] border-t border-t-solid border-t-custom-border text-xs font-bold leading-[18px]">Browse images</span> -->
@@ -282,9 +315,9 @@
     }
       </div>
 } @else{
-    <div class="corbel-bold" >
+    <div class="font-Barlow" >
         <!-- Group Header -->
-        <div class="group-header !corbel-bold flex gap-[15px] text-sm font-medium text-secondaryText p-[15px] border-y border-y-solid border-y-custom-border" [ngClass]="isExpanded? 'bg-[#232B32] ':'bg-primaryBg'" (click)="toggle(group)">
+        <div class="group-header !font-Barlow flex gap-[15px] text-sm font-medium text-secondaryText p-[15px] border-y border-y-solid border-y-custom-border" [ngClass]="isExpanded? 'bg-[#232B32] ':'bg-primaryBg'" (click)="toggle(group)">
             @if (isExpanded) {
                 <span class="w-[14px] h-[12px]">
                     <img src="assets/svg-icons/folder-icon-expanded.svg" alt="Search" class="w-[14px]" />
