--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,6 @@
   }
 
   .corbel-bold {
-    font-family: 'CorbelBold';
-color: white;
+    font-family: 'CorbelBold' !important;
+color: white !important;
   }
